# EvanTools

./: .copilot-skills.md  .gitignore  REFACTOR_COMPLETED.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yaml
docs/: PYLANCE_CHECK_COMPLETION.md  REGISTRY_CODE_REVIEW_COMPLETION.md  REGISTRY_CODE_REVIEW_PHASE1.md  REGISTRY_CODE_REVIEW_PHASE2.md  REGISTRY_CODE_REVIEW_PLAN.md  SETUP_BRAINSTORM_2026-01-25.md  SETUP_MIGRATION_GUIDE.md  SETUP_REFACTOR_COMPLETION.md  SETUP_REFACTOR_PLAN.md  SETUP_REFACTOR_REVIEW.md
docs/plans/: 2026-01-24-config-refactor-plan.md  2026-01-25-registry-pylance-fix-plan.md
examples/: setup_advanced_usage.py  setup_basic_usage.py
src/evan_tools/: __init__.py  config.py  file.py  setup.py
src/evan_tools/config/: README.md  __init__.py  main.py
src/evan_tools/config/concurrency/: rw_lock.py
src/evan_tools/config/core/: __init__.py  cache.py  manager.py  merger.py  reload_controller.py  source.py
src/evan_tools/file/: __init__.py  main.py
src/evan_tools/md5/: __init__.py  api.py  calculator_base.py  calculator_full.py  calculator_sparse.py  config.py  exceptions.py  main.py  result.py
src/evan_tools/registry/: __init__.py  main.py
src/evan_tools/setup/: __init__.py  _legacy.py  main.py
src/evan_tools/time/: main.py
src/evan_tools/zip/: __init__.py
tests/file/: test_path_gatherer.py  test_performance.py
tests/md5/: test_api.py  test_backward_compatibility.py  test_calculator_base.py  test_calculator_sparse.py
tests/registry/: __init__.py  test_main.py
(+33 files in other folders)
