[project]
name = "evan_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.14.0",
    "pydash>=8.0.5",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["evan_tools*"]
